unpackaged/main/default/objects/CICO_Child_Asset__c/CICO_Child_Asset__c.object-meta.xml
<CustomObject>
    <label>Child Asset</label>
    <nameField>
        <displayFormat>CA-{000000}</displayFormat>
        <label>Asset Ref No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Child Assets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>