unpackaged/main/default/objects/CICO_Child_Asset__c/fields/Asset_Description__c.field-meta.xml
<CustomField>
    <fullName>Asset_Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Asset Description</label>
    <type>TextArea</type>
</CustomField>