unpackaged/main/default/objects/CICO_Child_Asset__c/fields/Check_In__c.field-meta.xml
<CustomField>
    <fullName>Check_In__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Check In</label>
    <referenceTo>CICO_Check_In__c</referenceTo>
    <relationshipLabel>Child Assets</relationshipLabel>
    <relationshipName>Child_Assets</relationshipName>
    <type>Lookup</type>
</CustomField>