unpackaged/main/default/objects/CICO_Child_Asset__c/fields/Issued__c.field-meta.xml
<CustomField>
    <fullName>Issued__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Issued</label>
    <type>Checkbox</type>
</CustomField>