unpackaged/main/default/objects/CICO_Child_Asset__c/fields/Received__c.field-meta.xml
<CustomField>
    <fullName>Received__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Received</label>
    <type>Checkbox</type>
</CustomField>