unpackaged/main/default/objects/CICO_Child_Asset__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Check_In__c</columns>
    <columns>Check_Out__c</columns>
    <columns>Asset_Description__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>